fixed component and text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ body {
 }
 
 .container {
-  max-width: 500px;
-  margin: 30px auto;
+  max-width: 530px;
+  margin: 50px auto;
   overflow: auto;
   min-height: 300px;
   background-color: #f6dde6;
@@ -36,7 +36,7 @@ body {
   color: #333580;
   border: none;
   padding: 10px 20px;
-  margin: 5px;
+  margin: 5px 5px 5px 5px;
   border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
@@ -55,11 +55,7 @@ body {
 
 .btn-block {
   display: block;
-  width: 100%;
-}
-
-.checkbox-div {
-  text-align: left;
+  width: 98%;
 }
 
 .task {
@@ -84,11 +80,13 @@ body {
 }
 
 .form-control {
-  margin: 20px 0;
+  margin: 20px 10px 20px 0px; /* 20px 0 * <-- 20px top/bottom, 0 left/right 
+  // top, right, bottom, left margin. */
 }
 
 .form-control label {
   display: block;
+  padding-left: 0.3em;
 }
 
 .form-control input {
@@ -126,5 +124,28 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 footer {
   margin-top: 30px;
+  text-align: center;
+}
+
+.checkbox-div {
+  display: inline;
+  padding-right: 69%;
+}
+
+.container-split {
+  display: flex;
+}
+
+.left-half {
+  flex: 1;
+  padding-right: 0.8rem;
+}
+
+.right-half {
+  flex: 1;
+  padding-left: 0.8rem;
+}
+.no-task-shown {
+  display: block;
   text-align: center;
 }
